--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,12 +3,13 @@
 @tailwind utilities;
 
 :root {
-  --primary-color: #1F1F1F;
-  --secondary-color: #343434;
+  --primary-color: #1c1c1c;
+  --secondary-color: #232323;
   --tertiary-color: #009f71;
   --quaternary-color: #00bb86;
-  --quinary-color: #FFFFFF;
-  --text-color: #7e7e7e;
+  --quinary-color: #ededed;
+  --text-color: #7b7b7b;
+  --text-secondary-color: #ededed;
 }
 
 .text-normal {
@@ -16,26 +17,77 @@
   font-size: 1rem;
 }
 
-
-h1, h2, h3, h4, h5, h6 {
-  color: var(--primary-color);
+p {
+  font-family: "inter";
+  color: var(--text-color);
 }
 
+a {
+  font-family: "inter";
+  color: var(--tertiary-color);
+}
+
+a:hover {
+  color: var(--quaternary-color);
+}
+
+li {
+  font-family: "inter";
+  color: var(--text-color);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "inter";
+  font-weight: 600;
+  color: var(--text-secondary-color);
+}
+
+h1 {
+  font-size: 2.5em;
+}
+
+h2 {
+  font-size: 2em;
+}
+
+h3 {
+  font-size: 1.8em;
+}
+
+h4 {
+  font-size: 1.5em;
+}
+
+h5 {
+  font-size: 1.2em;
+}
+
+h6 {
+  font-size: 1em;
+}
 
 body {
   background-color: var(--primary-color);
 }
 
+/* Buttons */
 
 .btn-primary {
+  font-family: "inter";
   background-color: var(--tertiary-color);
-  color: var(--primary-color );
+  color: var(--primary-color);
   font-weight: 700;
   padding: 0.5rem 1rem;
   border-radius: 0.35rem;
 }
 
 .btn-secondary {
+  font-family: "inter";
   background-color: var(--secondary-color);
   color: var(--quinary-color);
   font-weight: 700;
@@ -51,4 +103,38 @@ body {
 .btn-secondary:hover {
   background-color: var(--quaternary-color);
   color: var(--primary-color);
+}
+
+/* Cards */
+
+.card-primary {
+  font-family: "Source Code Pro", monospace;
+  background-color: var(--secondary-color);
+  border: var(--secondary-color) 1px solid;
+  padding: 1rem;
+}
+
+.card-primary:hover {
+  border: var(--quaternary-color) 1px solid;
+}
+
+.card-primary p {
+  font-family: "Source Code Pro", monospace !important;
+}
+
+/* Testimonial */
+.testimonial-primary {
+  font-family: "inter";
+  background-color: var(--secondary-color);
+  border: var(--secondary-color) 1px solid;
+  padding: 1rem;
+}
+
+
+.testimonial-primary:hover {
+  border: var(--quaternary-color) 1px solid;
+}
+
+.testimonial-primary p {
+  font-family: "inter"  !important;
 }
