--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,8 +82,6 @@ body {
   background-color: var(--tertiary-color);
   color: var(--primary-color);
   font-weight: 700;
-  padding: 0.5rem 1rem;
-  border-radius: 0.35rem;
 }
 
 .btn-secondary {
@@ -91,8 +89,6 @@ body {
   background-color: var(--secondary-color);
   color: var(--quinary-color);
   font-weight: 700;
-  padding: 0.5rem 1rem;
-  border-radius: 0.35rem;
 }
 
 .btn-primary:hover {
@@ -137,4 +133,13 @@ body {
 
 .testimonial-primary p {
   font-family: "inter"  !important;
+}
+
+
+/* Progress Circle */
+.progress-ring__circle {
+  stroke-dasharray: 400, 400;
+  transition: stroke-dashoffset 0.35s;
+  transform: rotate(-90deg);
+  transform-origin: 50% 50%;
 }
