--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,22 +4,27 @@
 
 @layer base {
   h1 {
-    @apply text-5xl font-inter font-bold text-textcolor-heading;
+    @apply text-3xl sm:text-4xl md:text-5xl lg:text-5xl xl:text-5xl font-inter font-bold text-textcolor-heading;
   }
+
   h2 {
-    @apply text-4xl font-inter font-bold text-textcolor-heading;
+    @apply text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-5xl font-inter font-bold text-textcolor-heading;
   }
+
   h3 {
-    @apply text-3xl font-inter font-semibold text-textcolor-heading;
+    @apply text-xl sm:text-2xl md:text-3xl lg:text-4xl xl:text-4xl font-inter font-semibold text-textcolor-heading;
   }
+
   h4 {
-    @apply text-2xl font-inter font-semibold text-textcolor-heading;
+    @apply text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-3xl font-inter font-semibold text-textcolor-heading;
   }
+
   h5 {
-    @apply text-xl font-inter font-semibold text-textcolor-heading;
+    @apply text-base sm:text-lg md:text-xl lg:text-2xl xl:text-2xl font-inter font-semibold text-textcolor-heading;
   }
+
   h6 {
-    @apply text-lg font-inter font-semibold text-textcolor-heading;
+    @apply text-sm sm:text-base md:text-lg lg:text-xl xl:text-xl font-inter font-semibold text-textcolor-heading;
   }
   p,
   label {
@@ -70,6 +75,10 @@
   @apply bg-neutral-dark bg-aboutme-section-background bg-no-repeat;
 }
 
+#formation-section {
+  @apply bg-neutral-deep;
+}
+
 #experience-section {
   @apply bg-neutral-deep;
 }
@@ -82,10 +91,9 @@
   @apply bg-neutral-deep;
 }
 
-#contact-section{
+#contact-section {
   @apply bg-neutral-deep;
 }
-
 
 /* SCROLLBAR */
 ::-webkit-scrollbar {
