Refactoring of paddings, cards, blockquote component and data to show

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,7 +63,7 @@
   @apply bg-welcome-section-background bg-cover bg-center bg-no-repeat;
 }
 
-#aboutme-section {
+#aboutme-section-bg {
   @apply bg-neutral-dark bg-aboutme-section-background bg-no-repeat;
 }
 
